--- a/styles.css
+++ b/styles.css
@@ -710,11 +710,12 @@ iframe {
 
 /* General Body Styles */
 body {
-    /* background-image: url(images/backgroundimage.jpg); */
-    position: right center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), 
+    url('images/backgroundimage.jpg');
+    background-size: cover; /* Ensure the image covers the whole background */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+    background-attachment: fixed; /* Keep the background image fixed while scrolling */
+    background-position: center; /* Center the background image */
     font-family: 'Futura', sans-serif;
     margin: 0;
     padding: 0;
@@ -1806,7 +1807,6 @@ nav .closeMenu {
     }
     
 }
-
 @media (max-width: 480px) {
     .action-btn {
         top: 56%;
