--- a/styles.css
+++ b/styles.css
@@ -1880,9 +1880,10 @@ nav .closeMenu {
 }
 @media (max-width: 480px) {
     body {
-        background: url('images/background-image2.jpg') no-repeat center center fixed;
-        background-size: cover; /* Ensure the background image covers the viewport */
-        background-position: center; /* Center the background image */
+        background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+        url('images/background-image2.jpg') center center fixed; 
+        background-size: cover; /* Ensure the image covers the whole background */
+        background-repeat: no-repeat; /* Prevent the image from repeating */
         font-size: 14px; /* Smaller font size for body text */
     }
     .action-btn {
