--- a/styles.css
+++ b/styles.css
@@ -782,7 +782,7 @@ iframe {
 body {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
     url('images/background-image2.jpg');
-    background-size: cover; /* Ensure the image covers the whole background */
+    background-size: contain; /* Ensure the image covers the whole background */
     background-repeat: no-repeat; /* Prevent the image from repeating */
     background-attachment: fixed; /* Keep the background image fixed while scrolling */
     background-position: center; /* Center the background image */
@@ -792,7 +792,6 @@ body {
     max-width: 100;
     background-color:#000;
     color: white;
-    height: 100%;
     
 }
 .about-navbar nav {
@@ -1880,10 +1879,7 @@ nav .closeMenu {
 }
 @media (max-width: 480px) {
 
-    body {
-        background-size: contain;
-    }
-
+    
     .action-btn {
         top: 56%;
     }
