--- a/styles.css
+++ b/styles.css
@@ -779,20 +779,40 @@ iframe {
 }
 
 /* General Body Styles */
-body {
+/* body {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
     url('images/background-image2.jpg');
-    background-size: contain; /* Ensure the image covers the whole background */
-    background-repeat: no-repeat; /* Prevent the image from repeating */
-    background-attachment: fixed; /* Keep the background image fixed while scrolling */
-    background-position: center; /* Center the background image */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
     font-family: 'Futura', sans-serif;
     margin: 0;
     padding: 0;
-    max-width: 100;
+    max-width: 1000;
     background-color:#000;
     color: white;
-    
+}*/
+
+body {
+    font-family: 'Futura', sans-serif;
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    color: white;
+    height: 100%;
+    position: relative;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/background-image2.jpg') center center / cover no-repeat;
+    z-index: -1;
 }
 .about-navbar nav {
     position: relative;
