--- a/styles.css
+++ b/styles.css
@@ -365,9 +365,10 @@ section .glitch-con h2.section-title {
     font-size: 4em;
   }
 }
-@media (max-width: 414px) {
+@media (max-width: 430px) {
   .glitch {
     font-size: 3em;
+    margin-bottom: 0;
   }
 }
 
@@ -1478,6 +1479,11 @@ footer {
     text-align: center;
 }
 
+.biography {
+    font-family: 'Futura';
+    line-height: 1.6;
+    font-size: 1.2rem;
+}
 .about-page {
     background-image: none;
     background-color: #000;
@@ -1518,16 +1524,11 @@ footer {
 
 #career-highlights {
     color: #000;
-    background: #000;
+    background: rgba(255, 255, 255, 0.1);
     padding: 50px 0;
     font-family: 'Arial', sans-serif;
 }
 
-.biography {
-    font-family: 'Futura';
-    line-height: 1.6;
-    font-size: 1rem;
-}
 .container {
     width: 90%;
     margin: 0 auto;
@@ -1567,12 +1568,17 @@ h2 {
 }
 
 .timeline-content {
-    background: white;
+    color: #fff;
+    background: rgba(255, 123, 0, 0.1);
     padding: 20px;
     border-radius: 6px;
     box-shadow: 0 3px 15px rgba(0,0,0,0.1);
     margin-left: 20px;
     position: relative;
+}
+.timeline-content h3 {
+    margin-bottom: 5px;
+    font-size: 1.6rem;
 }
 
 .timeline-content:before {
@@ -1649,7 +1655,7 @@ h2 {
 
 /* Press Releases Section Styling */
 .press-releases {
-    background-color: #f4f4f4;
+    background-color: rgba(0, 0, 0, 0.10);
     padding: 20px;
 }
 
@@ -1662,14 +1668,14 @@ h2 {
 .press-releases .section-title {
     font-size: 2rem;
     text-align: center;
-    color: #333;
+    color: #da9656;
 }
 
 .press-releases .press-release {
     margin-bottom: 20px;
     padding: 15px;
-    background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    background: rgba(255, 123, 0, 0.3);
+    box-shadow: 0 2px 5px rgba(173, 171, 171, 0.1);
 }
 
 .press-releases .release-title {
@@ -1685,7 +1691,7 @@ h2 {
 .press-releases .release-summary {
     font-size: 1rem;
     line-height: 1.5;
-    color: #333;
+    color: #fff;
 }
 
 .press-releases .read-more {
