--- a/styles.css
+++ b/styles.css
@@ -430,18 +430,21 @@
     font-size: 1.3rem;
 }
 .shop-btn {
-    font-family: 'Futura';
+    font-family: 'Futura', sans-serif;
+
     display: block;
     margin: 20px auto;
     padding: 15px 30px;
     font-size: 1.2rem;
-    font-family: 'Futura', sans-serif;
     color: white;
     background-color: transparent;
     border: 1px solid #fff;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
+}
+a {
+    text-decoration: none;
 }
 
 .shop-btn:hover {
