--- a/styles.css
+++ b/styles.css
@@ -1774,23 +1774,25 @@ img {
 /* Music Page */
 
 #music-body nav {
-    background-color: rgba( 100, 0, 0, 0.5);
+    background-color: rgba( 0, 0, 0, 10);
     position: relative;
 }
 
 
 .music-section {
-    background-color: rgba(255, 255, 255, 10);
     text-align: center;
     padding: 20px;
 }
 
 .music-main1 {
+    background-color: rgba(0, 0, 0, 0.2);
+
     padding: 20px;
-    font-family: 'Futura', sans-serif;
+    font-family: "Londrina Outline", cursive;
     color: #fff;
     text-align: center;
 }
+
 
 .music-grid1 {
     display: flex;
@@ -1798,6 +1800,7 @@ img {
     justify-content: center;
     gap: 20px;
 }
+
 
 .music-item1 {
     position: relative;
@@ -1862,17 +1865,18 @@ img {
 }*/
 
 .albums, .singles .videos {
+    background-color: rgba( 0, 0, 0, 0.1);
     display: flex;
     justify-content:space-evenly;
     align-items: center;
     gap: 20px;
-    margin: 20px;
+    padding: 40px;
     flex-wrap: wrap;
 }
 .album, .single {
-    background-color: #f0efec;  /* White background to blend with Spotify's default theme */
+    background-color: #000;  /* White background to blend with Spotify's default theme */
     padding: 10px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);  /* Soft shadow for depth */
+    box-shadow: 0 4px 6px rgba( 0, 0, 0, 0.5);  /* Soft shadow for depth */
     border-radius: 8px;  /* Rounded corners for a softer look */
 }
 
