--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background: rgba(0, 0, 0, 10); /* Semi-transparent background */
     position: absolute;
     width: 100%;
     top: 0;
@@ -1642,6 +1642,9 @@ img {
   @media (max-width: 600px) {
     nav {
         position: relative; /* Change to relative positioning */
+    }
+    nav  {
+        justify-content: space-between;
     }
     .gallery-grid {
         grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
